--- a/FontEnd/public/index.html
+++ b/FontEnd/public/index.html
@@ -7,6 +7,7 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="../img/logo/ShoeIcon.png">
   <!-- CSS here -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
@@ -62,7 +63,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Shoes Shop</title>
 </head>
 
 <body>
