--- a/FontEnd/public/index.html
+++ b/FontEnd/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <link rel="manifest" href="site.webmanifest">
+  <!-- <link rel="manifest" href="site.webmanifest"> -->
   <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="icon" href="../img/logo/ShoeIcon.png">
@@ -121,30 +121,5 @@
 <!-- Heart js, main Jquery -->
 <script src="./assets/js/heartIcon.js"></script>
 
-
-<script type="text/javascript" src="SkyTheme/plugins/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/bootstrap/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/jquery-bar-rating/dist/jquery.barrating.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/owl-carousel/owl.carousel.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/gmap3.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/imagesloaded.pkgd.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/isotope.pkgd.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/jquery.matchHeight-min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/slick/slick/slick.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/elevatezoom/jquery.elevatezoom.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/jquery-ui/jquery-ui.min.js"></script>
-<script type="text/javascript"
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAx39JFH5nhxze1ZydH-Kl8xXM3OK4fvcg&amp;region=GB"></script>
-<script type="text/javascript" src="SkyTheme/plugins/revolution/js/jquery.themepunch.tools.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/revolution/js/jquery.themepunch.revolution.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/revolution/js/extensions/revolution.extension.video.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
-<script type="text/javascript"
-  src="plugins/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
-<script type="text/javascript" src="SkyTheme/plugins/revolution/js/extensions/revolution.extension.actions.min.js"></script>
 <script type="text/javascript" src="SkyTheme/js/main.js"></script>
 </html>
