--- a/FontEndAdmin/public/index.html
+++ b/FontEndAdmin/public/index.html
@@ -23,6 +23,10 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/all.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/free.min.css">
+<link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/brand.min.css">
+<link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/flag.min.css">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -49,4 +53,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script defer src="https://unpkg.com/@coreui/icons/js/svgxuse.js"></script>
 </html>
