--- a/FontEnd/public/index.html
+++ b/FontEnd/public/index.html
@@ -5,27 +5,27 @@
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <!-- <link rel="manifest" href="site.webmanifest"> -->
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/assets/img/favicon.ico">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="icon" href="../img/logo/ShoeIcon.png">
+  <link rel="icon" href="%PUBLIC_URL%/../img/logo/ShoeIcon.png">
   <!-- CSS here -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
   <!-- <link rel="stylesheet" href="assets/css/owl.carousel.min.css"> -->
   <!-- <link rel="stylesheet" href="assets/css/flaticon.css"> -->
   <!-- <link rel="stylesheet" href="assets/css/slicknav.css"> -->
   <!-- <link rel="stylesheet" href="assets/css/animate.min.css"> -->
   <!-- <link rel="stylesheet" href="assets/css/magnific-popup.css"> -->
-  <link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.min.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/fontawesome-free-5.15.1-web/css/all.min.css">
   <!-- <link rel="stylesheet" href="assets/css/themify-icons.css">
   <link rel="stylesheet" href="assets/css/slick.css"> -->
-  <link rel="stylesheet" href="assets/css/nice-select.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <!-- <link rel="stylesheet" href="assets/css/nice-select.css"> -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css">
 
   <!-- <link rel="stylesheet" href="Fashi/css/elegant-icons.css" type="text/css">
   <link rel="stylesheet" href="Fashi/css/jquery-ui.min.css" type="text/css">
   <link rel="stylesheet" href="Fashi/css/slicknav.min.css" type="text/css">
   <link rel="stylesheet" href="Fashi/css/style.css" type="text/css"> -->
-  <link rel="stylesheet" href="SkyTheme/css/style.css">
+  <!-- <link rel="stylesheet" href="%PUBLIC_URL%/SkyTheme/css/style.css"> -->
 
 
 
@@ -101,5 +101,5 @@
 <!-- Heart js, main Jquery -->
 <script src="./assets/js/heartIcon.js"></script>
 
-<script type="text/javascript" src="SkyTheme/js/main.js"></script>
+<script type="text/javascript" src="/SkyTheme/js/main.js"></script>
 </html>
